--- a/controller/config/default/kustomization.yaml
+++ b/controller/config/default/kustomization.yaml
@@ -22,6 +22,8 @@ bases:
 - ../certmanager
 # [PROMETHEUS] To enable prometheus monitor, uncomment all sections with 'PROMETHEUS'. 
 #- ../prometheus
+- ../psp
+
 
 patchesStrategicMerge:
   # Protect the /metrics endpoint by putting it behind auth.
