--- a/controller/config/webhook/kustomization.yaml
+++ b/controller/config/webhook/kustomization.yaml
@@ -4,3 +4,11 @@ resources:
 
 configurations:
 - kustomizeconfig.yaml
+
+patchesJson6902:
+- target:
+    group: admissionregistration.k8s.io
+    version: v1beta1
+    kind: ValidatingWebhookConfiguration
+    name: validating-webhook-configuration
+  path: patch.yaml
