--- a/controller/config/webhook/kustomization.yaml
+++ b/controller/config/webhook/kustomization.yaml
@@ -11,4 +11,7 @@ patchesJson6902:
     version: v1beta1
     kind: ValidatingWebhookConfiguration
     name: validating-webhook-configuration
-  path: patch.yaml
+  # use suffix: .list instead of .yaml cuz otherwise envtest.start will fail
+  #   envtest requires all yaml files should be PartialObjectMetadata
+  #   https://github.com/kubernetes-sigs/controller-runtime/blob/v0.6.3/pkg/envtest/webhook.go#L373-L374
+  path: patch.list
