add canEditAnyNamespace function

--- a/api/.air.conf
+++ b/api/.air.conf
@@ -2,7 +2,7 @@
 
 # Working directory
 # . or absolute path, please note that the directories following must be under root.
-root = "." 
+root = "."
 tmp_dir = "tmp"
 
 [build]
@@ -11,7 +11,7 @@ cmd = "go build -o ./tmp/main ."
 # Binary file yields from `cmd`.
 bin = "tmp/main"
 # Customize binary.
-full_bin = "APP_ENV=dev APP_USER=air ./tmp/main"
+full_bin = "APP_ENV=dev APP_USER=air ./tmp/main --verbose"
 # Watch these filename extensions.
 include_ext = ["go", "tpl", "tmpl", "html"]
 # Ignore these filename extensions or directories.
