WIP deal with tenant resource change

--- a/controller/Makefile
+++ b/controller/Makefile
@@ -46,6 +46,7 @@ install: manifests
 setup_webhook_development_env:
 	mkdir -p ./tmp
 	openssl req -x509 -newkey rsa:4096 -keyout ./tmp/tls.key -out ./tmp/tls.crt -days 365 -nodes -subj '/CN=host.minikube.internal'
+	kubectl kustomize config/webhook/ > ./tmp/kustomized-webhook-manifests.yaml
 	ruby ./scripts/build-development-webhook-yaml.rb
 	kubectl apply -f ./tmp/webhooks.yaml
 
