--- a/controller/config/crd/bases/core.kalm.dev_components.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_components.yaml
@@ -140,6 +140,24 @@ spec:
             image:
               minLength: 1
               type: string
+            istioResourceRequirements:
+              description: ResourceRequirements describes the compute resource requirements.
+              properties:
+                limits:
+                  additionalProperties:
+                    type: string
+                  description: 'Limits describes the maximum amount of compute resources
+                    allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                  type: object
+                requests:
+                  additionalProperties:
+                    type: string
+                  description: 'Requests describes the minimum amount of compute resources
+                    required. If Requests is omitted for a container, it defaults
+                    to Limits if that is explicitly specified, otherwise to an implementation-defined
+                    value. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                  type: object
+              type: object
             livenessProbe:
               description: Probe describes a health check to be performed against
                 a container to determine whether it is alive or ready to receive traffic.
@@ -320,6 +338,8 @@ spec:
               type: array
             preferNotCoLocated:
               type: boolean
+            priority:
+              type: integer
             readinessProbe:
               description: Probe describes a health check to be performed against
                 a container to determine whether it is alive or ready to receive traffic.
