--- a/api/.air.conf
+++ b/api/.air.conf
@@ -11,7 +11,7 @@ cmd = "go build -o ./tmp/main ."
 # Binary file yields from `cmd`.
 bin = "tmp/main"
 # Customize binary.
-full_bin = "APP_ENV=dev APP_USER=air ./tmp/main --verbose"
+full_bin = "APP_ENV=dev APP_USER=air ./tmp/main --verbose --enable-debug-apis"
 # Watch these filename extensions.
 include_ext = ["go", "tpl", "tmpl", "html"]
 # Ignore these filename extensions or directories.
