deploy controller by applying kalmOperatorConfig with new kalm version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -175,8 +175,21 @@ jobs:
             sudo mv ./kubectl /usr/local/bin/kubectl
             mkdir ${HOME}/.kube
             echo "$KUBE_CONFIG" | base64 --decode > ${HOME}/.kube/config
-            IMG=kalmhq/kalm-controller:latest make deploy
-            kubectl -n kalm-system patch deployment kalm-controller -p "{\"spec\":{\"template\":{\"metadata\":{\"labels\":{\"date\":\"`date +'%s'`\"}}}}}"
+
+            #IMG=kalmhq/kalm-controller:latest make deploy
+            #kubectl -n kalm-system patch deployment kalm-controller -p "{\"spec\":{\"template\":{\"metadata\":{\"labels\":{\"date\":\"`date +'%s'`\"}}}}}"
+
+            cat \<< EOF >> kalm-operator-config.yaml
+            apiVersion: install.kalm.dev/v1alpha1
+            kind: KalmOperatorConfig
+            metadata:
+              namespace: kalm-operator
+              name: kalmoperatorconfig-sample
+            spec:
+              kalmVersion: $CIRCLE_SHA
+            EOF
+
+            kubectl apply -f kalm-operator-config.yaml
   deploy-operator:
     docker:
       - image: circleci/golang:1.13.11
@@ -191,7 +204,7 @@ jobs:
             sudo mv ./kubectl /usr/local/bin/kubectl
             mkdir ${HOME}/.kube
             echo "$KUBE_CONFIG" | base64 --decode > ${HOME}/.kube/config
-            IMG=kalmhq/kalm-operator:latest make deploy
+            IMG=kalmhq/kalm-operator:${CIRCLE_SHA1} make deploy
             kubectl -n kalm-operator patch deployment kalm-operator -p "{\"spec\":{\"template\":{\"metadata\":{\"labels\":{\"date\":\"`date +'%s'`\"}}}}}"
 workflows:
   version: 2
