enable rbac for operator

--- a/operator/config/rbac/role.yaml
+++ b/operator/config/rbac/role.yaml
@@ -157,6 +157,12 @@ rules:
   verbs:
   - '*'
 - apiGroups:
+  - policy
+  resources:
+  - podsecuritypolicies
+  verbs:
+  - '*'
+- apiGroups:
   - rbac.authorization.k8s.io
   resources:
   - clusterrolebindings
