--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -208,7 +208,7 @@ jobs:
             IMG=kalmhq/kalm-operator:${CIRCLE_SHA1} make deploy
             cat config/manager/kustomization.yaml
 
-            kubectl -n kalm-operator patch deployment kalm-operator -p "{\"spec\":{\"template\":{\"metadata\":{\"labels\":{\"date\":\"`date +'%s'`\"}}}}}"
+            #kubectl -n kalm-operator patch deployment kalm-operator -p "{\"spec\":{\"template\":{\"metadata\":{\"labels\":{\"date\":\"`date +'%s'`\"}}}}}"
 workflows:
   version: 2
   dashboard:
@@ -287,7 +287,9 @@ workflows:
             - build-push-controller-image
           filters:
             branches:
-              only: master
+              only:
+                - master
+                - multiple-tenancy
   operator:
     jobs:
       - build-push-operator-image:
