--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,6 +152,30 @@ jobs:
   #        KALM_APP: kalm-system
   #        KALM_COMPONENT: kalm
   #        KALM_COMPONENT_IMG_TAG: $CIRCLE_SHA1
+  deploy-dashboard:
+    docker:
+      - image: circleci/golang:1.13.11
+    steps:
+      - run:
+          name: deploy
+          command: |
+            curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.15.9/bin/linux/amd64/kubectl
+            chmod +x ./kubectl
+            sudo mv ./kubectl /usr/local/bin/kubectl
+            mkdir ${HOME}/.kube
+            echo "$KUBE_CONFIG" | base64 --decode > ${HOME}/.kube/config
+
+            cat \<< EOF >> kalm-operator-config.yaml
+            apiVersion: install.kalm.dev/v1alpha1
+            kind: KalmOperatorConfig
+            metadata:
+              namespace: kalm-operator
+              name: kalmoperatorconfig-sample
+            spec:
+              kalmVersion: $CIRCLE_SHA
+            EOF
+
+            kubectl apply -f kalm-operator-config.yaml
   #deploy-auth-proxy:
   #  executor: deploy-orb/default
   #  steps:
@@ -238,14 +262,15 @@ workflows:
                 - multiple-tenancy
             tags:
               only: /^v.*/
-      #- deploy-dashboard:
-      #    context: deploy-demo-cluster
-      #    requires:
-      #      - build-push-dashboard-image
-      #    filters:
-      #      branches:
-      #        only:
-      #          - master
+      - deploy-dashboard:
+          context: deploy-demo-cluster
+          requires:
+            - build-push-dashboard-image
+          filters:
+            branches:
+              only:
+                - master
+                - multiple-tenancy
       #- deploy-auth-proxy:
       #    context: deploy-demo-cluster
       #    requires:
