--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -200,20 +200,20 @@ jobs:
             mkdir ${HOME}/.kube
             echo "$KUBE_CONFIG" | base64 --decode > ${HOME}/.kube/config
 
-            #IMG=kalmhq/kalm-controller:latest make deploy
-            #kubectl -n kalm-system patch deployment kalm-controller -p "{\"spec\":{\"template\":{\"metadata\":{\"labels\":{\"date\":\"`date +'%s'`\"}}}}}"
+            IMG=kalmhq/kalm-controller:latest make deploy
+            kubectl -n kalm-system patch deployment kalm-controller -p "{\"spec\":{\"template\":{\"metadata\":{\"labels\":{\"date\":\"`date +'%s'`\"}}}}}"
 
-            cat \<< EOF >> kalm-operator-config.yaml
-            apiVersion: install.kalm.dev/v1alpha1
-            kind: KalmOperatorConfig
-            metadata:
-              namespace: kalm-operator
-              name: kalmoperatorconfig-sample
-            spec:
-              kalmVersion: $CIRCLE_SHA1
-            EOF
+            #cat \<< EOF >> kalm-operator-config.yaml
+            #apiVersion: install.kalm.dev/v1alpha1
+            #kind: KalmOperatorConfig
+            #metadata:
+            #  namespace: kalm-operator
+            #  name: kalmoperatorconfig-sample
+            #spec:
+            #  kalmVersion: $CIRCLE_SHA1
+            #EOF
 
-            kubectl apply -f kalm-operator-config.yaml
+            #kubectl apply -f kalm-operator-config.yaml
   deploy-operator:
     docker:
       - image: circleci/golang:1.13.11
