--- a/operator/config/rbac/psp_privileged_role.yaml
+++ b/operator/config/rbac/psp_privileged_role.yaml
@@ -6,7 +6,7 @@ rules:
   - apiGroups:
       - policy
     resourceNames:
-      - privileged
+      - kalm-privileged
     resources:
       - podsecuritypolicies
     verbs:
