--- a/operator/config/rbac/psp_restricted_role.yaml
+++ b/operator/config/rbac/psp_restricted_role.yaml
@@ -6,7 +6,7 @@ rules:
   - apiGroups:
       - policy
     resourceNames:
-      - restricted
+      - kalm-restricted
     resources:
       - podsecuritypolicies
     verbs:
