--- a/operator/config/psp/psp_privileged.yaml
+++ b/operator/config/psp/psp_privileged.yaml
@@ -1,7 +1,7 @@
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
-  name: privileged
+  name: kalm-privileged
   annotations:
     seccomp.security.alpha.kubernetes.io/allowedProfileNames: '*'
 spec:
