update controller version in CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -199,36 +199,14 @@ jobs:
             mkdir ${HOME}/.kube
             echo "$KUBE_CONFIG" | base64 --decode > ${HOME}/.kube/config
 
-            # IMG=kalmhq/kalm-controller:latest make deploy
-            # kubectl -n kalm-system patch deployment kalm-controller -p "{\"spec\":{\"template\":{\"metadata\":{\"labels\":{\"date\":\"`date +'%s'`\"}}}}}"
-
+            # get current kalmoperator config
             mkdir tmp
             kubectl get kalmoperatorconfigs.install.kalm.dev -n kalm-operator kalmoperatorconfig-sample -oyaml > tmp/kalm-op-config.yaml
 
+            # update controller version
             ruby scripts/update-kalmop-config-yaml.rb controller $CIRCLE_SHA1
-
-            cat tmp/updated.yaml
-            # kubectl apply -f ./tmp/updated.yaml
-  test-deploy-controller:
-    docker:
-      - image: circleci/ruby:2.4.1
-    steps:
-      - checkout
-      - run:
-          name: deploy
-          command: |
-            curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.15.9/bin/linux/amd64/kubectl
-            chmod +x ./kubectl
-            sudo mv ./kubectl /usr/local/bin/kubectl
-            mkdir ${HOME}/.kube
-            echo "$KUBE_CONFIG" | base64 --decode > ${HOME}/.kube/config
-
-            mkdir tmp
-            kubectl get kalmoperatorconfigs.install.kalm.dev -n kalm-operator kalmoperatorconfig-sample -oyaml > tmp/kalm-op-config.yaml
-
-            ruby scripts/update-kalmop-config-yaml.rb controller $CIRCLE_SHA1
-
-            cat tmp/updated.yaml
+            # apply
+            kubectl apply -f tmp/updated.yaml
   deploy-operator:
     docker:
       - image: circleci/golang:1.13.11
@@ -245,9 +223,6 @@ jobs:
             echo "$KUBE_CONFIG" | base64 --decode > ${HOME}/.kube/config
 
             IMG=kalmhq/kalm-operator:${CIRCLE_SHA1} make deploy
-            cat config/manager/kustomization.yaml
-
-            #kubectl -n kalm-operator patch deployment kalm-operator -p "{\"spec\":{\"template\":{\"metadata\":{\"labels\":{\"date\":\"`date +'%s'`\"}}}}}"
 workflows:
   version: 2
   dashboard:
@@ -330,8 +305,6 @@ workflows:
               only:
                 - master
                 - multiple-tenancy
-      - test-deploy-controller:
-          context: deploy-demo-cluster
   operator:
     jobs:
       - build-push-operator-image:
